<resources>
    <string name="app_name">GeoQuiz</string>

    <string name="question_australia">Canberra is the capital of Australia.</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake</string>

    <string name="true_button">TRUE</string>
    <string name="false_button">FALSE</string>
    <string name="previous_button">PREV</string>
    <string name="previous_button_content">Previous</string>
    <string name="next_button">NEXT</string>
    <string name="next_button_content">Next</string>

    <string name="score_label">Score</string>

    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="quiz_complete">Quiz Complete!</string>

    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button_label">CHEAT!</string>
    <string name="judgement_toast">Cheating is wrong</string>

    <string name="cheat_tokens_label">Remaining Cheat Tokens</string>
</resources>
